--- a/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/MainWindow.xaml
+++ b/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/MainWindow.xaml
@@ -37,13 +37,13 @@
             </Button>
         </StackPanel>
         <RichTextBox Background="#FFAEB5A2" BorderBrush="Black"
-             HorizontalAlignment="Center" Width="844" VerticalAlignment="Top" IsReadOnly="True" Height="auto" Margin="0,150,0,0" Padding="0,10,0,10" SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" FontSize="14">
+             HorizontalAlignment="Center" Width="844" VerticalAlignment="Top" IsReadOnly="True" Height="auto" Margin="0,150,0,0" Padding="0,10,0,10" SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" FontSize="14" TextChanged="RichTextBox_TextChanged">
             <FlowDocument PagePadding="0" TextAlignment="Center">
                 <Paragraph>
                     <Run FontWeight="Bold" Text="Tervetuloa käyttämään ampumapäiväkirjaa"/>
                 </Paragraph>
                 <Paragraph>
-                    <Run Text="Tehdessäsi uutta kirjausta, valitse: ”Aloita tulosten kirjaaminen”."/>
+                    <Run Text="Tehdessäsi uutta kirjausta, valitse: ”Tulosten kirjaaminen”."/>
                 </Paragraph>
                 <Paragraph>
                     <Run Text="Tulosten tarkasteluun valitse: ”Näytä tulokset”."/>
