--- a/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/TulostenTarkastelu.xaml
+++ b/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/TulostenTarkastelu.xaml
@@ -34,5 +34,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button Content="Palaa päävalikkoon" HorizontalAlignment="Right" VerticalAlignment="Top" Height="61" Width="172" Click="PoistuPäävalikkoon_Click" Margin="0,10,10,0" Grid.RowSpan="2" FontFamily="Global Sans Serif" FontSize="14" Background="White"/>
+        <Button Content="Tulosta ampumatiedot" HorizontalAlignment="Left" VerticalAlignment="Top" Height="61" Width="172" Click="TulostaAmpumatiedot_Click" Margin="10,10,0,0" Grid.Row="0" FontFamily="Global Sans Serif" FontSize="14"/>
+
     </Grid>
 </Window>
