--- a/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/TulostenTarkastelu.xaml
+++ b/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/TulostenTarkastelu.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Ampumapäiväkirjakonsoli.TulostenTarkastelu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="TulostenTarkastelu" Height="900" Width="1100" MinWidth="800" MinHeight="600">
+        Title="TulostenTarkastelu" Height="900" Width="1100" MinWidth="900" MinHeight="600">
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="/camo.jpg" Opacity="0.5" Stretch="None"/>
@@ -12,11 +12,11 @@
         </Grid.RowDefinitions>
 
         <!-- Valikko ampujien nimiä varten -->
-        <ComboBox x:Name="cmbAmpujat" HorizontalAlignment="Center" VerticalAlignment="Top" IsEditable="True" Text="Ampujan valinta" IsReadOnly="True"
-           HorizontalContentAlignment="Center" Width="200" Margin="0,10,0,0" SelectionChanged="cmbAmpujat_SelectionChanged" Height="46" Grid.RowSpan="2" FontFamily="Global Sans Serif" FontSize="14"/>
+        <ComboBox x:Name="cmbAmpujat" HorizontalAlignment="Center" VerticalAlignment="Top" IsEditable="True" Text="Ampujan valinta" IsReadOnly="True" Grid.Row="0"
+           HorizontalContentAlignment="Center" Width="200" Margin="0,20,0,0" SelectionChanged="cmbAmpujat_SelectionChanged" Height="46"  FontFamily="Global Sans Serif" FontSize="14"/>
 
         <!-- DataGrid ammunnan tietojen näyttämiseen -->
-        <DataGrid x:Name="dgAmmunnat" Grid.Row="1" AutoGenerateColumns="False" Margin="10,103,10,26"
+        <DataGrid x:Name="dgAmmunnat" Grid.Row="1" AutoGenerateColumns="False" Margin="10,103,10,56"
           HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"
           CanUserAddRows="False" CanUserDeleteRows="False" FontFamily="Global Sans Serif" FontSize="14">
             <DataGrid.Columns>
@@ -33,8 +33,8 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Palaa päävalikkoon" HorizontalAlignment="Right" VerticalAlignment="Top" Height="61" Width="172" Click="PoistuPäävalikkoon_Click" Margin="0,10,10,0" Grid.RowSpan="2" FontFamily="Global Sans Serif" FontSize="14" Background="White"/>
-        <Button Content="Tulosta ampumatiedot" HorizontalAlignment="Left" VerticalAlignment="Top" Height="61" Width="172" Click="TulostaAmpumatiedot_Click" Margin="10,10,0,0" Grid.Row="0" FontFamily="Global Sans Serif" FontSize="14"/>
+        <Button Content="Palaa päävalikkoon" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Height="61" Width="172" Click="PoistuPäävalikkoon_Click" Margin="0,20,10,0" FontFamily="Global Sans Serif" FontSize="14" Background="White"/>
+        <Button Content="Tulosta ampumatiedot"  HorizontalAlignment="Left" VerticalAlignment="Top" Height="61" Width="172" Click="TulostaAmpumatiedot_Click" Margin="10,20,0,0" Grid.Row="0" FontFamily="Global Sans Serif" FontSize="14"/>
 
     </Grid>
 </Window>
