Korjattiin ja paikkailtiin ohjelmaa -JL

--- a/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/MainWindow.xaml
+++ b/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/MainWindow.xaml
@@ -56,6 +56,9 @@
                 <Paragraph>
                     <Run Text="Tulosten tarkasteluun valitse: ”Näytä tulokset”."/>
                 </Paragraph>
+                <Paragraph>
+                    <Run Text="Vaida sovelluksen teema oikealla klikkauksella!"/>
+                </Paragraph>
             </FlowDocument>
         </RichTextBox>
 
