--- a/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/Ampujataulukko.xaml
+++ b/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/Ampujataulukko.xaml
@@ -3,12 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Ampumapäiväkirjakonsoli"
         mc:Ignorable="d"
         Title="Ampujataulukko" Height="900" Width="1100" MinWidth="950" MinHeight="750">
-
-    <Grid Background="{DynamicResource Backdrop}">
-
+    <Grid Background="{DynamicResource Backdrop}">        
+         
         <Grid.ContextMenu>
             <ContextMenu>
                 <MenuItem Header="Vihreä teema" Click="VihreäThemeClick"/>
@@ -16,56 +14,65 @@
                 <MenuItem Header="Vaaleanpunainen teema" Click="VaaleanpunainenThemeClick"/>
                 <MenuItem Header="Pelkistetty teema" Click="PelkistettyThemeClick"/>
             </ContextMenu>
-        </Grid.ContextMenu>
-
+        </Grid.ContextMenu>  
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="14*"/>
-            <RowDefinition Height="9*"/>
+            <!-- Rivi 0: Päivämäärä ja Aloita tulosten kirjaaminen -painike -->
+            <RowDefinition Height="Auto" MinHeight="699"/>
+            <!-- Rivi 1: Syöttökentät ja niiden otsikot, DataGrid ja muut hallintaelementit -->
+            <RowDefinition Height="0*"/>
         </Grid.RowDefinitions>
 
-
-
+        <!--Rivi 0-->
+        <!-- Napit ja tekstilaatikko tulosten näyttämiseen ja ohjelman sulkemiseen -->
         <Button Content="Aloita tulosten kirjaaminen" MaxHeight="60" VerticalAlignment="Top" Height="60" Background="{DynamicResource Tulosten kirjaaminen}"
-                Click="AloitaKirjaaminen_Click" Grid.Row="0" BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" Margin="5,20,0,0" HorizontalAlignment="Left" Width="170"/>
+                Click="AloitaKirjaaminen_Click" Grid.Row="0" BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" Margin="188,101,0,0" HorizontalAlignment="Left" Width="170"/>
 
-        <TextBox x:Name="Päivämäärä"  MaxHeight="60" Margin="188,17,0,0" Grid.Row="0" Background="{DynamicResource Päivämäärä2}"  TextAlignment="Center" VerticalContentAlignment="Center" TextWrapping="Wrap" BorderBrush="Black"
+        <TextBox x:Name="Päivämäärä"  MaxHeight="60" Margin="188,-39,0,56" Grid.Row="0" Background="{DynamicResource Päivämäärä2}"  TextAlignment="Center" VerticalContentAlignment="Center" TextWrapping="Wrap" BorderBrush="Black"
                   SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" FontSize="14" IsReadOnly="True" HorizontalAlignment="Left" Width="170"/>
 
-        <Button Content="Palaa päävalikkoon"  MaxHeight="60" Click="PoistuPäävalikkoon_Click" Margin="0,20,10,4" Background="#FFF7F8FA" 
-                FontFamily="Global Sans Serif" FontSize="14" Height="60" Grid.Row="0" MaxWidth="170" HorizontalAlignment="Right" Width="170"/>
 
-        <Button Content="Tallenna"  MaxHeight="60" Margin="5,15,0,99" Click="TallennaTiedot_Click" Background="#FFF7F8FA" 
-                Grid.Row="1" BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="170"/>
+        <Button Content="Palaa päävalikkoon"  MaxHeight="60" Click="PoistuPäävalikkoon_Click" Margin="0,10,10,106" Background="#FFF7F8FA" 
+                FontFamily="Global Sans Serif" FontSize="14" Grid.Row="0" MaxWidth="170" HorizontalAlignment="Right" Width="170"/>
 
-        <Button Content="Keskeytä kirjaus" MaxHeight="60" Height="60" Background="#FFF7F8FA" Margin="188,16,0,100" Click="KeskeytaKirjaus_Click" Grid.Row="1" BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="170"/>
+        <!--Rivi 0-->
+        <Button Content="Tallenna"  MaxHeight="60" Margin="10,3,0,98" Click="TallennaTiedot_Click" Background="#FFF7F8FA" 
+                Grid.Row="0" BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="170"/>
 
-        <TextBox x:Name="txtOhje" MaxHeight="60" Height="60" TextAlignment="Center" Margin="380,16,0,0" Grid.Row="1" TextWrapping="Wrap"
-                 Text="Ohje: Aloita syöttämällä ampumaradan pituus sekä ampujien määrä." VerticalAlignment="Top" BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="336"/>
+        <Button Content="Keskeytä kirjaus" MaxHeight="60" Background="#FFF7F8FA" Margin="10,101,0,0" Click="KeskeytaKirjaus_Click" Grid.Row="0"
+                BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="170"/>
 
-        <Label Content="Ampumaradan pituus:" Margin="10,129,0,573" Grid.Row="1" Background="#FFF7F8FA" MaxHeight="50" BorderBrush="Black"
-               BorderThickness="1" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="353" Grid.RowSpan="2" />
-        <TextBox x:Name="txtAmpumaradanPituus"  Margin="194,140,0,0" Grid.Row="1" MaxLength="4" MaxHeight="34" BorderBrush="#FF4E5056" 
-                 SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" MaxWidth="157" MinWidth="157" MinHeight="36" GotFocus="txtAmpumaradanPituus_GotFocus" HorizontalAlignment="Left" Width="157"/>
 
-        <Label Content="Ampujien määrä:"  Margin="10,23,0,509" Grid.Row="2" Background="#FFF7F8FA" MaxHeight="50"
-               BorderBrush="Black" BorderThickness="1" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="353"/>
-        <TextBox x:Name="txtAmpujienMäärä"  Margin="194,33,0,519" Grid.Row="2" MaxLength="2" MaxHeight="34" BorderBrush="#FF4E5056"
+        <!-- Ampumapäiväkirjan tietojen syöttö -->
+        <!--Rivi 1-->
+
+
+        <TextBox x:Name="txtOhje" MaxHeight="60" TextAlignment="Center" Margin="12,7,0,626" TextWrapping="Wrap"
+                 Text="Ohje: Aloita syöttämällä ampumaradan pituus sekä ampujien määrä." BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="348" Grid.Row="1"/>
+
+        <Label Content="Ampumaradan pituus (m):" Margin="12,78,0,551" Background="#FFF7F8FA" MaxHeight="50" BorderBrush="Black"
+               BorderThickness="1" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="348" Grid.Row="1" />
+        <TextBox x:Name="txtAmpumaradanPituus"  Margin="194,85,0,558" MaxLength="4" MaxHeight="34" BorderBrush="#FF4E5056" 
+                 SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" MaxWidth="157" MinWidth="157" MinHeight="36" GotFocus="txtAmpumaradanPituus_GotFocus" HorizontalAlignment="Left" Width="158" Grid.Row="1"/>
+
+        <Label Content="Ampujien määrä:"  Margin="12,143,0,508" Grid.Row="1" Background="#FFF7F8FA" MaxHeight="50"
+               BorderBrush="Black" BorderThickness="1" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="348"/>
+        <TextBox x:Name="txtAmpujienMäärä"  Margin="194,150,0,515" Grid.Row="1" MaxLength="2" MaxHeight="34" BorderBrush="#FF4E5056"
                  SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" MaxWidth="157" MinWidth="157" MinHeight="34" GotFocus="txtAmpujienMäärä_GotFocus" HorizontalAlignment="Left" Width="158"/>
+        <!--Rivi 1-->
+        <Label x:Name="Kuvaus" Content="Kuvaus ammunnasta (valinnainen):" Grid.Row="1" Margin="12,191,0,248" Background="#FFF7F8FA" MaxHeight="250" BorderBrush="Black"
+               BorderThickness="1" Foreground="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="348" />
 
-        <Label x:Name="Kuvaus" Content="Kuvaus ammunnasta (valinnainen):" Grid.Row="2" Margin="10,93,0,280" Background="#FFF7F8FA" MaxHeight="250" BorderBrush="Black" BorderThickness="1" Foreground="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="353" />
+        <TextBox x:Name="txtKuvaus" Grid.Row="1" Margin="23,252,0,277" AcceptsTab="True" MaxHeight="150" TextWrapping="Wrap" AcceptsReturn="True"
+                 Height="Auto" VerticalScrollBarVisibility="Auto" MaxLength="300" BorderBrush="#FF4E5056" SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" GotFocus="txtKuvaus_GotFocus" TextChanged="txtKuvaus_TextChanged" HorizontalAlignment="Left" Width="326" />
 
-        <TextBox x:Name="txtKuvaus" Grid.Row="2" Margin="22,127,0,318" AcceptsTab="True" MaxHeight="150" TextWrapping="Wrap" AcceptsReturn="True"
-                 Height="Auto" VerticalScrollBarVisibility="Auto" MaxLength="300" BorderBrush="#FF4E5056" SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" GotFocus="txtKuvaus_GotFocus" TextChanged="txtKuvaus_TextChanged" HorizontalAlignment="Left" Width="329" />
+        <Label x:Name="Laskuri" Content="0 / 300" Grid.Row="1" Margin="275,360,0,205" MaxHeight="20" FontFamily="Global Sans Serif" FontSize="10" HorizontalContentAlignment="Right" HorizontalAlignment="Left" Width="74" />
 
-        <Label x:Name="Laskuri" Content="0 / 300" Grid.Row="2" Margin="283,80,0,100" MaxHeight="20" FontFamily="Global Sans Serif" FontSize="10" HorizontalContentAlignment="Right" HorizontalAlignment="Left" Width="75" />
-
-
-        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="363,0,0,0" Grid.RowSpan="2" HorizontalAlignment="Left" Width="737" Height="647" VerticalAlignment="Bottom">
+        <!--Rivi 1-->
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto" Margin="365,0,0,0" >
             <DataGrid x:Name="dataGrid" AutoGenerateColumns="False" Background="{DynamicResource dataGrid}" IsTabStop="True" BorderBrush="Black" RowHeight="30" MaxWidth="950"
-                      MaxHeight="700" HorizontalScrollBarVisibility="Auto" FontFamily="Global Sans Serif" FontSize="14" Width="700" Height="611">
+                      HorizontalScrollBarVisibility="Auto" FontFamily="Global Sans Serif" FontSize="14" Width="700" Height="550" >
                 <DataGrid.RowHeaderStyle>
                     <Style/>
                 </DataGrid.RowHeaderStyle>
@@ -87,7 +94,7 @@
                     <DataGridTemplateColumn Header="Laukaukset" Width="25*">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBox Text="{Binding Laukau, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="False"/>
+                                <TextBox Text="{Binding LaukaustenMäärä, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="False"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
@@ -101,6 +108,5 @@
                 </DataGrid.Columns>
             </DataGrid>
         </ScrollViewer>
-
     </Grid>
 </Window>
