--- a/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/Ampujataulukko.xaml
+++ b/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/Ampujataulukko.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="Ampujataulukko" Height="900" Width="1100" MinWidth="950" MinHeight="750">
-    <Grid Background="{DynamicResource Backdrop}">        
-         
+    <Grid Background="{DynamicResource Backdrop}">
+
         <Grid.ContextMenu>
             <ContextMenu>
                 <MenuItem Header="Vihreä teema" Click="VihreäThemeClick"/>
@@ -14,8 +14,8 @@
                 <MenuItem Header="Vaaleanpunainen teema" Click="VaaleanpunainenThemeClick"/>
                 <MenuItem Header="Pelkistetty teema" Click="PelkistettyThemeClick"/>
             </ContextMenu>
-        </Grid.ContextMenu>  
-        
+        </Grid.ContextMenu>
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <!-- Rivi 0: Päivämäärä ja Aloita tulosten kirjaaminen -painike -->
@@ -26,21 +26,21 @@
 
         <!--Rivi 0-->
         <!-- Napit ja tekstilaatikko tulosten näyttämiseen ja ohjelman sulkemiseen -->
-        <Button Content="Aloita tulosten kirjaaminen" MaxHeight="60" VerticalAlignment="Top" Height="60" Background="{DynamicResource Tulosten kirjaaminen}"
-                Click="AloitaKirjaaminen_Click" Grid.Row="0" BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" Margin="188,101,0,0" HorizontalAlignment="Left" Width="170"/>
+        <Button Content="Aloita tulosten kirjaaminen" MaxHeight="60" VerticalAlignment="Top" Height="81" Background="{DynamicResource Tulosten kirjaaminen}"
+                Click="AloitaKirjaaminen_Click" Grid.Row="0" BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" Margin="188,80,0,0" HorizontalAlignment="Left" Width="170"/>
 
-        <TextBox x:Name="Päivämäärä"  MaxHeight="60" Margin="188,-39,0,56" Grid.Row="0" Background="{DynamicResource Päivämäärä2}"  TextAlignment="Center" VerticalContentAlignment="Center" TextWrapping="Wrap" BorderBrush="Black"
-                  SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" FontSize="14" IsReadOnly="True" HorizontalAlignment="Left" Width="170"/>
+        <TextBox x:Name="Päivämäärä"  MaxHeight="60" Margin="188,-40,0,32" Grid.Row="0" Background="{DynamicResource Päivämäärä2}"  TextAlignment="Center" VerticalContentAlignment="Center" TextWrapping="Wrap" BorderBrush="Black"
+                  SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" FontSize="14" IsReadOnly="True" HorizontalAlignment="Left" Width="170" IsHitTestVisible="False"/>
 
 
-        <Button Content="Palaa päävalikkoon"  MaxHeight="60" Click="PoistuPäävalikkoon_Click" Margin="0,10,10,106" Background="#FFF7F8FA" 
+        <Button Content="Palaa päävalikkoon"  MaxHeight="60" Click="PoistuPäävalikkoon_Click" Margin="0,10,10,70" Background="#FFF7F8FA" 
                 FontFamily="Global Sans Serif" FontSize="14" Grid.Row="0" MaxWidth="170" HorizontalAlignment="Right" Width="170"/>
 
         <!--Rivi 0-->
-        <Button Content="Tallenna"  MaxHeight="60" Margin="10,3,0,98" Click="TallennaTiedot_Click" Background="#FFF7F8FA" 
+        <Button Content="Tallenna"  MaxHeight="60" Margin="10,3,0,75" Click="TallennaTiedot_Click" Background="#FFF7F8FA" 
                 Grid.Row="0" BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="170"/>
 
-        <Button Content="Keskeytä kirjaus" MaxHeight="60" Background="#FFF7F8FA" Margin="10,101,0,0" Click="KeskeytaKirjaus_Click" Grid.Row="0"
+        <Button Content="Keskeytä kirjaus" MaxHeight="60" Background="#FFF7F8FA" Margin="10,80,0,0" Click="KeskeytaKirjaus_Click" Grid.Row="0"
                 BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="170"/>
 
 
@@ -49,19 +49,19 @@
 
 
         <TextBox x:Name="txtOhje" MaxHeight="60" TextAlignment="Center" Margin="12,7,0,626" TextWrapping="Wrap"
-                 Text="Ohje: Aloita syöttämällä ampumaradan pituus sekä ampujien määrä." BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="348" Grid.Row="1"/>
+                 Text="Ohje: Aloita syöttämällä ampumaradan pituus sekä ampujien määrä." BorderBrush="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="348" Grid.Row="1" IsHitTestVisible="False"/>
 
         <Label Content="Ampumaradan pituus (m):" Margin="12,78,0,551" Background="#FFF7F8FA" MaxHeight="50" BorderBrush="Black"
                BorderThickness="1" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="348" Grid.Row="1" />
         <TextBox x:Name="txtAmpumaradanPituus"  Margin="194,85,0,558" MaxLength="4" MaxHeight="34" BorderBrush="#FF4E5056" 
                  SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" MaxWidth="157" MinWidth="157" MinHeight="36" GotFocus="txtAmpumaradanPituus_GotFocus" HorizontalAlignment="Left" Width="158" Grid.Row="1"/>
 
-        <Label Content="Ampujien määrä:"  Margin="12,143,0,508" Grid.Row="1" Background="#FFF7F8FA" MaxHeight="50"
+        <Label Content="Ampujien määrä:"  Margin="12,148,0,503" Grid.Row="1" Background="#FFF7F8FA" MaxHeight="50"
                BorderBrush="Black" BorderThickness="1" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="348"/>
-        <TextBox x:Name="txtAmpujienMäärä"  Margin="194,150,0,515" Grid.Row="1" MaxLength="2" MaxHeight="34" BorderBrush="#FF4E5056"
+        <TextBox x:Name="txtAmpujienMäärä"  Margin="194,155,0,510" Grid.Row="1" MaxLength="2" MaxHeight="34" BorderBrush="#FF4E5056"
                  SelectionBrush="#FF7A8270" FontFamily="Global Sans Serif" MaxWidth="157" MinWidth="157" MinHeight="34" GotFocus="txtAmpujienMäärä_GotFocus" HorizontalAlignment="Left" Width="158"/>
         <!--Rivi 1-->
-        <Label x:Name="Kuvaus" Content="Kuvaus ammunnasta (valinnainen):" Grid.Row="1" Margin="12,191,0,248" Background="#FFF7F8FA" MaxHeight="250" BorderBrush="Black"
+        <Label x:Name="Kuvaus" Content="Kuvaus ammunnasta (valinnainen):" Grid.Row="1" Margin="12,207,0,232" Background="#FFF7F8FA" MaxHeight="250" BorderBrush="Black"
                BorderThickness="1" Foreground="Black" FontFamily="Global Sans Serif" FontSize="14" HorizontalAlignment="Left" Width="348" />
 
         <TextBox x:Name="txtKuvaus" Grid.Row="1" Margin="23,252,0,277" AcceptsTab="True" MaxHeight="150" TextWrapping="Wrap" AcceptsReturn="True"
@@ -70,7 +70,7 @@
         <Label x:Name="Laskuri" Content="0 / 300" Grid.Row="1" Margin="275,360,0,205" MaxHeight="20" FontFamily="Global Sans Serif" FontSize="10" HorizontalContentAlignment="Right" HorizontalAlignment="Left" Width="74" />
 
         <!--Rivi 1-->
-        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto" Margin="365,0,0,0" >
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Auto" Margin="365,14,0,-15" Grid.RowSpan="2" >
             <DataGrid x:Name="dataGrid" AutoGenerateColumns="False" Background="{DynamicResource dataGrid}" IsTabStop="True" BorderBrush="Black" RowHeight="30" MaxWidth="950"
                       HorizontalScrollBarVisibility="Auto" FontFamily="Global Sans Serif" FontSize="14" Width="700" Height="550" >
                 <DataGrid.RowHeaderStyle>
