--- a/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/TulostenTarkastelu.xaml
+++ b/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/TulostenTarkastelu.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="TulostenTarkastelu" Height="900" Width="1100" MinWidth="800" MinHeight="600">
-   
+
     <Grid Background="{DynamicResource Backdrop}">
 
         <Grid.ContextMenu>
@@ -13,7 +13,7 @@
                 <MenuItem Header="Pelkistetty teema" Click="PelkistettyThemeClick"/>
             </ContextMenu>
         </Grid.ContextMenu>
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -28,10 +28,11 @@
           HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"
           CanUserAddRows="False" CanUserDeleteRows="False" FontFamily="Global Sans Serif" FontSize="14">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Päivämäärä" Binding="{Binding Päivämäärä}" Width="12*" />
-                <DataGridTextColumn Header="Radan pituus (m)" Binding="{Binding AmpumaradanPituus}" Width="12*" />
-                <DataGridTextColumn Header="Laukausten määrä" Binding="{Binding LaukaustenMäärä}" Width="12*" />
-                <DataGridTextColumn Header="Kokonaistulos" Binding="{Binding Kokonaistulos}" Width="12*" />
+                <DataGridCheckBoxColumn Header="Valitse" Binding="{Binding onChekattu}" Width="5*"/>
+                <DataGridTextColumn Header="Päivämäärä" Binding="{Binding Päivämäärä, StringFormat='dd/MM/yy HH:mm'}" Width="10*" />
+                <DataGridTextColumn Header="Radan pituus (m)" Binding="{Binding AmpumaradanPituus}" Width="11*" />
+                <DataGridTextColumn Header="Laukausten määrä" Binding="{Binding LaukaustenMäärä}" Width="13*" />
+                <DataGridTextColumn Header="Kokonaistulos" Binding="{Binding Kokonaistulos}" Width="10*" />
                 <DataGridTemplateColumn Header="Ammunnan kuvaus" Width="50*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -41,7 +42,7 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        
+        <Button Content="Poista valitut rivit" HorizontalAlignment="Left" Width="172" Click="PoistaValitutRivit_Click" Margin="204,20,0,0" Grid.Row="0" FontFamily="Global Sans Serif" FontSize="14" Height="61" VerticalAlignment="Top"/>
         <Button Content="Palaa päävalikkoon" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Height="61" Width="172" Click="PoistuPäävalikkoon_Click" Margin="0,20,10,0" FontFamily="Global Sans Serif" FontSize="14" Background="White"/>
         <Button Content="Tulosta ampumatiedot"  HorizontalAlignment="Left" VerticalAlignment="Top" Height="61" Width="172" Click="TulostaAmpumatiedot_Click" Margin="10,20,0,0" Grid.Row="0" FontFamily="Global Sans Serif" FontSize="14"/>
 
