--- a/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/TulostenTarkastelu.xaml
+++ b/Ampumapäiväkirjakonsoli/Ampumapäiväkirjakonsoli/TulostenTarkastelu.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Ampumapäiväkirjakonsoli.TulostenTarkastelu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="TulostenTarkastelu" Height="900" Width="1100" MinWidth="800" MinHeight="600">
+        Title="TulostenTarkastelu" Height="900" Width="1100" MinWidth="880" MinHeight="600">
 
     <Grid Background="{DynamicResource Backdrop}">
 
@@ -15,18 +15,20 @@
         </Grid.ContextMenu>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" MinHeight="100"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
         <!-- Valikko ampujien nimiä varten -->
-        <ComboBox x:Name="cmbAmpujat" HorizontalAlignment="Center" VerticalAlignment="Top" IsEditable="True" Text="Ampujan valinta" IsReadOnly="True" Grid.Row="0"
-           HorizontalContentAlignment="Center" Width="200" Margin="0,20,0,0" SelectionChanged="cmbAmpujat_SelectionChanged" Height="46"  FontFamily="Global Sans Serif" FontSize="14"/>
+        <ComboBox x:Name="cmbAmpujat" IsEditable="True" Text="Ampujan valinta" IsReadOnly="True" Grid.Row="0"
+          MaxWidth="180" MinWidth="180" HorizontalContentAlignment="Center"
+          SelectionChanged="cmbAmpujat_SelectionChanged" FontFamily="Global Sans Serif"
+          FontSize="14" HorizontalAlignment="Left"  Margin="450,20,0,42"/>
 
         <!-- DataGrid ammunnan tietojen näyttämiseen -->
         <DataGrid x:Name="dgAmmunnat" Grid.Row="1" AutoGenerateColumns="False" Margin="10,103,10,56"
           HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"
-          CanUserAddRows="False" CanUserDeleteRows="False" FontFamily="Global Sans Serif" FontSize="14">
+          CanUserAddRows="False" CanUserDeleteRows="False" FontFamily="Global Sans Serif" FontSize="14" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridCheckBoxColumn Header="Valitse" Binding="{Binding onChekattu}" Width="5*"/>
                 <DataGridTextColumn Header="Päivämäärä" Binding="{Binding Päivämäärä, StringFormat='dd/MM/yy HH:mm'}" Width="10*" />
@@ -42,9 +44,12 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Poista valitut rivit" HorizontalAlignment="Left" Width="172" Click="PoistaValitutRivit_Click" Margin="204,20,0,0" Grid.Row="0" FontFamily="Global Sans Serif" FontSize="14" Height="61" VerticalAlignment="Top"/>
-        <Button Content="Palaa päävalikkoon" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Top" Height="61" Width="172" Click="PoistuPäävalikkoon_Click" Margin="0,20,10,0" FontFamily="Global Sans Serif" FontSize="14" Background="White"/>
-        <Button Content="Tulosta ampumatiedot"  HorizontalAlignment="Left" VerticalAlignment="Top" Height="61" Width="172" Click="TulostaAmpumatiedot_Click" Margin="10,20,0,0" Grid.Row="0" FontFamily="Global Sans Serif" FontSize="14"/>
+        <Button Content="Poista valitut rivit" Click="PoistaValitutRivit_Click" Margin="204,20,0,4" 
+                Grid.Row="0" FontFamily="Global Sans Serif" FontSize="14" MaxWidth="180" HorizontalAlignment="Left" Width="182"/>
+        <Button Content="Palaa päävalikkoon" Grid.Row="0" Click="PoistuPäävalikkoon_Click"
+                Margin="0,20,10,4" FontFamily="Global Sans Serif" FontSize="14" Background="White" MaxWidth="180" HorizontalAlignment="Right" Width="180"/>
+        <Button Content="Tulosta ampumatiedot" Click="TulostaAmpumatiedot_Click" Margin="10,20,0,4" Grid.Row="0" 
+                FontFamily="Global Sans Serif" FontSize="14" MaxWidth="180" HorizontalAlignment="Left" Width="172"/>
 
     </Grid>
 </Window>
